Actual Answers Dropdowns

--- a/config.json
+++ b/config.json
@@ -97,7 +97,7 @@
     "Georgia": {},
     "Germany": {
       "states": [
-        "Baden-Württemberg",
+        "Baden-Wurttemberg",
         "Bavaria",
         "Berlin",
         "Brandenburg",
@@ -126,7 +126,48 @@
     "Honduras": {},
     "Hungary": {},
     "Iceland": {},
-    "India": {},
+    "India": {
+        "states": [
+            "Andhra Pradesh",
+            "Arunachal Pradesh",
+            "Assam",
+            "Bihar",
+            "Chhattisgarh",
+            "Goa",
+            "Gujarat",
+            "Haryana",
+            "Himachal Pradesh",
+            "Jharkhand",
+            "Karnataka",
+            "Kerala",
+            "Madhya Pradesh",
+            "Maharashtra",
+            "Manipur",
+            "Meghalaya",
+            "Mizoram",
+            "Nagaland",
+            "Odisha",
+            "Punjab",
+            "Rajasthan",
+            "Sikkim",
+            "Tamil Nadu",
+            "Telangana",
+            "Tripura",
+            "Uttarakhand",
+            "Uttar Pradesh",
+            "West Bengal"
+        ],
+        "union_territories": [
+            "Andaman and Nicobar Islands",
+            "Chandigarh",
+            "Dadra and Nagar Haveli and Daman and Diu",
+            "Delhi",
+            "Jammu and Kashmir",
+            "Ladakh",
+            "Lakshadweep",
+            "Puducherry"
+        ]
+    },
     "Indonesia": {},
     "Iran": {},
     "Iraq": {},
@@ -237,8 +278,98 @@
     "Uganda": {},
     "Ukraine": {},
     "United Arab Emirates": {},
-    "United Kingdom": {},
-    "United States": {},
+    "United Kingdom": {
+        "countries": [
+            "England",
+            "Northern Ireland",
+            "Scotland",
+            "Wales"
+        ],
+        "crown_dependencies": [
+            "Guernsey",
+            "Isle of Man",
+            "Jersey"
+        ],
+        "overseas_territories": [
+            "Akrotiri and Dhekelia",
+            "Anguilla",
+            "Bermuda",
+            "British Indian Ocean Territory",
+            "British Virgin Islands",
+            "Cayman Islands",
+            "Falkland Islands",
+            "Gibraltar",
+            "Montserrat",
+            "Pitcairn Islands",
+            "Saint Helena, Ascension and Tristan da Cunha",
+            "South Georgia and the South Sandwich Islands",
+            "Turks and Caicos Islands"
+        ]
+    },
+    "United States": {
+        "states": [
+            "Alabama",
+            "Alaska",
+            "Arizona",
+            "Arkansas",
+            "California",
+            "Colorado",
+            "Connecticut",
+            "Delaware",
+            "Florida",
+            "Georgia",
+            "Hawaii",
+            "Idaho",
+            "Illinois",
+            "Indiana",
+            "Iowa",
+            "Kansas",
+            "Kentucky",
+            "Louisiana",
+            "Maine",
+            "Maryland",
+            "Massachusetts",
+            "Michigan",
+            "Minnesota",
+            "Mississippi",
+            "Missouri",
+            "Montana",
+            "Nebraska",
+            "Nevada",
+            "New Hampshire",
+            "New Jersey",
+            "New Mexico",
+            "New York",
+            "North Carolina",
+            "North Dakota",
+            "Ohio",
+            "Oklahoma",
+            "Oregon",
+            "Pennsylvania",
+            "Rhode Island",
+            "South Carolina",
+            "South Dakota",
+            "Tennessee",
+            "Texas",
+            "Utah",
+            "Vermont",
+            "Virginia",
+            "Washington",
+            "West Virginia",
+            "Wisconsin",
+            "Wyoming"
+        ],
+        "districts": [
+            "District of Columbia"
+        ],
+        "territories": [
+            "American Samoa",
+            "Guam",
+            "Northern Mariana Islands",
+            "Puerto Rico",
+            "U.S. Virgin Islands"
+        ]
+    },
     "Uruguay": {},
     "Uzbekistan": {},
     "Vanuatu": {},
