added russian subdivisions

--- a/config.json
+++ b/config.json
@@ -362,7 +362,104 @@
     "Qatar": {},
     "Republic of the Congo": {},
     "Romania": {},
-    "Russia": {},
+    "Russia": {
+        "republics": [
+            "Adygea",
+            "Altai",
+            "Bashkortostan",
+            "Buryatia",
+            "Chechnya",
+            "Chuvashia",
+            "Dagestan",
+            "Ingushetia",
+            "Kabardino-Balkaria",
+            "Kalmykia",
+            "Karachay-Cherkessia",
+            "Karelia",
+            "Khakassia",
+            "Komi",
+            "Mari El",
+            "Mordovia",
+            "North Ossetia–Alania",
+            "Sakha (Yakutia)",
+            "Tatarstan",
+            "Tuva",
+            "Udmurtia"
+        ],
+        "krais": [
+            "Altai Krai",
+            "Kamchatka Krai",
+            "Khabarovsk Krai",
+            "Krasnodar Krai",
+            "Krasnoyarsk Krai",
+            "Perm Krai",
+            "Primorsky Krai",
+            "Stavropol Krai",
+            "Zabaykalsky Krai"
+        ],
+        "oblasts": [
+            "Amur Oblast",
+            "Arkhangelsk Oblast",
+            "Astrakhan Oblast",
+            "Belgorod Oblast",
+            "Bryansk Oblast",
+            "Chelyabinsk Oblast",
+            "Irkutsk Oblast",
+            "Ivanovo Oblast",
+            "Kaliningrad Oblast",
+            "Kaluga Oblast",
+            "Kemerovo Oblast",
+            "Kirov Oblast",
+            "Kostroma Oblast",
+            "Kurgan Oblast",
+            "Kursk Oblast",
+            "Leningrad Oblast",
+            "Lipetsk Oblast",
+            "Magadan Oblast",
+            "Moscow Oblast",
+            "Murmansk Oblast",
+            "Nizhny Novgorod Oblast",
+            "Novgorod Oblast",
+            "Novosibirsk Oblast",
+            "Omsk Oblast",
+            "Orenburg Oblast",
+            "Oryol Oblast",
+            "Penza Oblast",
+            "Pskov Oblast",
+            "Rostov Oblast",
+            "Ryazan Oblast",
+            "Sakhalin Oblast",
+            "Samara Oblast",
+            "Saratov Oblast",
+            "Smolensk Oblast",
+            "Sverdlovsk Oblast",
+            "Tambov Oblast",
+            "Tomsk Oblast",
+            "Tula Oblast",
+            "Tver Oblast",
+            "Tyumen Oblast",
+            "Ulyanovsk Oblast",
+            "Vladimir Oblast",
+            "Volgograd Oblast",
+            "Vologda Oblast",
+            "Voronezh Oblast",
+            "Yaroslavl Oblast"
+        ],
+        "federal_cities": [
+            "Moscow",
+            "Saint Petersburg",
+            "Sevastopol"
+        ],
+        "autonomous_okrugs": [
+            "Chukotka Autonomous Okrug",
+            "Khanty-Mansi Autonomous Okrug",
+            "Nenets Autonomous Okrug",
+            "Yamalo-Nenets Autonomous Okrug"
+        ],
+        "autonomous_oblast": [
+            "Jewish Autonomous Oblast"
+        ]
+    },
     "Rwanda": {},
     "Saint Kitts and Nevis": {},
     "Saint Lucia": {},
