New and improved locations page

--- a/config.json
+++ b/config.json
@@ -260,7 +260,30 @@
     "Iraq": {},
     "Ireland": {},
     "Israel": {},
-    "Italy": {},
+    "Italy": {
+        "regions": [
+            "Abruzzo",
+            "Aosta Valley",
+            "Apulia",
+            "Basilicata",
+            "Calabria",
+            "Campania",
+            "Emilia-Romagna",
+            "Friuli-Venezia Giulia",
+            "Lazio",
+            "Liguria",
+            "Lombardy",
+            "Marche",
+            "Molise",
+            "Piedmont",
+            "Sardinia",
+            "Sicily",
+            "Trentino-South Tyrol",
+            "Tuscany",
+            "Umbria",
+            "Veneto"
+        ]
+    },
     "Jamaica": {},
     "Japan": {},
     "Jordan": {},
@@ -480,7 +503,31 @@
     "South Africa": {},
     "South Korea": {},
     "South Sudan": {},
-    "Spain": {},
+    "Spain": {
+        "autonomous_communities": [
+            "Andalusia",
+            "Aragon",
+            "Asturias",
+            "Balearic Islands",
+            "Basque Country",
+            "Canary Islands",
+            "Cantabria",
+            "Castile and León",
+            "Castilla-La Mancha",
+            "Catalonia",
+            "Extremadura",
+            "Galicia",
+            "La Rioja",
+            "Community of Madrid",
+            "Region of Murcia",
+            "Navarre",
+            "Valencian Community"
+        ],
+        "autonomous_cities": [
+            "Ceuta",
+            "Melilla"
+        ]
+    },
     "Sri Lanka": {},
     "Sudan": {},
     "Suriname": {},
